<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meme_app"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center_horizontal"
      android:layout_marginVertical="10dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/part_1"
        android:src="@drawable/part_1"
        android:scaleType="fitXY"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/part_2"
        android:src="@drawable/part_2"
        android:scaleType="fitXY"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/part_3"
        android:src="@drawable/part_3"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_name_is_kaream_ahmed"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_age_21"
            android:textSize="20sp"
            android:gravity="end"
            android:textColor="@color/black"
            android:textStyle="bold"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/computer_engineering"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            />


</LinearLayout>



</LinearLayout>
